Fix map popups on mobile

--- a/assets/scss/chart.scss
+++ b/assets/scss/chart.scss
@@ -1,4 +1,4 @@
-pre.chart {
+pre.chart-data {
   display: none;
 }
 
